Ajout de taco cloud comme server de ressources