@@ -14,6 +14,8 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
+
 @Data
 @Entity
 @NoArgsConstructor(access= AccessLevel.PRIVATE, force=true)
@@ -34,7 +36,7 @@ public class Utilisateur implements UserDetails{
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Arrays.asList(new SimpleGrantedAuthority("ROLE_USER"));
+        return List.of(new SimpleGrantedAuthority("ROLE_USER"));
     }
     @Override
     public boolean isAccountNonExpired() {
